# nnviz

./: .coveragerc  .flake8  .gitignore  BUGS  CODE_OF_CONDUCT.md  Makefile  README.md  TODO.md  docs.bat  pyproject.toml  pytest.ini  resnet18.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
docs/: conf.py  index.md  requirements.txt
docs/api_/: coloring.md  drawing.md  entities.md  inspection.md  intro.md  manipulation.md
docs/cli/: customization.md  data_tracing.md  intro.md  io.md  models.md  simplifying.md
docs/getting_started/: basics.md  installation.md
examples/: stupid_conv.py  stupid_model.py
examples/code/: bubble_color_debugger.py  minimal_example.py
examples/outputs/: refresh.sh  stupid_conv.py
nnviz/: dataspec.py  entities.py  nninspect.py
nnviz/cli/: main.py
nnviz/colors/: __init__.py  base.py  bubble.py  hashcolor.py  iterative.py
nnviz/drawing/: __init__.py  base.py  graphviz.py
nnviz/inspection/: __init__.py  base.py  torchfx.py
tests/nnviz/: conftest.py  test_dataspec.py  test_entities.py
tests/nnviz/colors/: test_base.py  test_bubble.py  test_hashcolor.py
tests/nnviz/drawing/: conftest.py  test_graphviz.py
tests/nnviz/inspection/: conftest.py  test_init.py  test_torchfx.py
